<resources>
    <string name="app_name" translatable="false">dummydata</string>
    <string name="default_notification_channel_id" translatable="false">channel_miscellaneous</string>
    <string name="profile_privacy_hyperlink">
        <a href="https://dummydata/terms-of-service/">Terms of Service</a> |
        <a href="https://dummydata/privacy-policy/">Privacy Policy</a>
    </string>
    <string-array name="spinner_language">
        <item>Select language</item>
        <item>English</item>
        <item>Español</item>
        <item>Português</item>
        <item>Deutsch</item>

        <item>Français</item>
        <item>Italiano</item>
        <item>Indonesia</item>
        <item>日本</item>
    </string-array>
    <string name="choose_language_eng" translatable="false">Choose language</string>
    <string name="language_english" translatable="false">English</string>
    <string name="continue_with_english_lanugage_btn" translatable="false">Continue with \'English\'</string>
    <string name="choose_language_spanish" translatable="false">Elige lengua</string>
    <string name="language_spanish" translatable="false">Español</string>
    <string name="continue_with_spanish_lanugage_btn" translatable="false">Continuar con \'Español\'</string>
    <string name="choose_language_portuguese" translatable="false">Escolha o seu idioma</string>
    <string name="language_portuguese" translatable="false">Português</string>
    <string name="continue_with_portuguese_lanugage_btn" translatable="false">Continuar com \'Português\'</string>
    <string name="language_german" translatable="false">Deutsch</string>
    <string name="language_russian" translatable="false">Pусский</string>
    <string name="language_french" translatable="false">Français</string>
    <string name="language_italian" translatable="false">Italiano</string>
    <string name="language_indonesian" translatable="false">Indonesia</string>
    <string name="language_japanese" translatable="false">日本</string>
    <string name="lang_spinner_toast_german_Deutsch_msg" translatable="false">dummydata in deutscher Sprache wird in Kürze gelauncht. !!</string>
    <string name="lang_spinner_toast_french_Français_msg" translatable="false">dummydata en langue française sera bientôt lancé !!</string>
    <string name="lang_spinner_toast_italian_Italiano_msg" translatable="false">dummydata in lingua italiana sarà lanciato a breve !!</string>
    <string name="lang_spinner_toast_indonesian_Indonesia_msg" translatable="false">dummydata dalam bahasa Indonesia akan segera diluncurkan !!</string>
    <string name="lang_spinner_toast_japanese_日本_msg" translatable="false">日本語のdummydataはまもなく発売されます。 !!</string>
    <string name="signup_checkbox_condition">
        By continuing, you agree that you are 18+ years old and you accept our
        <a href="https://dummydata/terms-of-service/">Terms of Service</a> and
        <a href="https://dummydata/privacy-policy/">Privacy Policy</a>
    </string>
    <string name="app_gplay_store_url" translatable="false">dummydata/store/apps/details?id=dummydata.playwin.android</string>
    <string name="app_terms_of_service_url" translatable="false">https://dummydata/view/dummydata-dummydata/terms-of-service</string>
    <string name="app_privacy_policy_url" translatable="false">https://dummydata/view/dummydata-dummydata/privacy-policy</string>
    <string name="please_wait">Please wait....</string>
    <string name="no_internet">No internet connection !!!</string>
    <string name="share_app_subject_msg">Play and Win</string>
    <string name="share_app_msg_body">\nDownload this exciting app which allow you to earn some money in free time.</string>
    <string name="share_app_chooser_title">Choose an application to share app link</string>
    <string name="notif_free_chance_title">Free Spins !!!</string>
    <string name="notif_free_chance_message">Your Free Spin is available !!!</string>
    <string name="notif_daily_reward_title">FREE 50 COINS available !!!</string>
    <string name="notif_daily_reward_message">Collect your free 50 Coins</string>
    <string name="first_developer_dialog_title">Error !!!</string>
    <string name="first_developer_dialog_msg">Please disable your developer option in order to continue playing this game.</string>
    <string name="first_developer_dialog_closeBtn">Close</string>
    <string name="dialog_app_not_downloaded_title">Error</string>
    <string name="dialog_app_not_downloaded_msg">Looks like you haven\'t downloaded this game from Google Play Store. \nTo continue playing this game, please uninstall the current version of the app and download it from the Play Store through the link below. \nThank you</string>
    <string name="dialog_app_not_downloaded_exit_btn">Exit</string>
    <string name="dialog_app_not_downloaded_download_btn">Download from here</string>
    <string name="welcome_text">Welcome</string>
    <string name="splash_continue_btn_text">Continue</string>
    <string name="menu_HOME">Home</string>
    <string name="menu_RANK">Rank</string>
    <string name="menu_GAME">Game</string>
    <string name="menu_WALLET">Wallet</string>
    <string name="menu_PROFILE">Setting</string>
    <string name="main_act_please_wait_loading_offer">Please wait while we load an offer for you.</string>
    <string name="main_act_no_offer_available">No offer available right now !!</string>
    <string name="main_act_press_back_to_exit">Press back again to exit </string>
    <string name="signup_button">Continue with Google</string>
    <string name="signup_close_button">Close</string>
    <string name="signup_registration_cancelled">Registration cancelled</string>
    <string name="signup_firebase_error_msg">Error creating your account. Clear app cache / storage and try again after sometime.</string>
    <string name="signup_verifying_account">Please wait while we verify your account....</string>
    <string name="home_frag_toolbar_currency_symbol">$</string>
    <string name="home_frag_cV_daily_reward">Daily Rewards</string>
    <string name="home_frag_cV_reward_in">Rewards </string>
    <string name="home_frag_cV_reward_available">Available</string>
    <string name="home_frag_item_normal_spin">Spin &amp; Earn</string>
    <string name="home_frag_item_normal_scratch">Scratch</string>
    <string name="home_frag_item_normal_flip">Flip &amp; Earn</string>
    <string name="home_frag_offerwall_cardView_title">Special offers \navailable !</string>
    <string name="home_frag_offerwall_cardView_btn_text">Get upto 10M Coins</string>
    <string name="rv_leaderboard_currency_symbol">"$ "</string>
    <string name="leader_frag_toolbar_leaderboard">Leaderboard</string>
    <string name="leader_frag_toolbar_info">Info</string>
    <string name="leader_frag_top_note">COMING SOON !! Weekly contest with JACKPOT Prize Money after 1k+ download on Google playstore. Hurry up, share this game with your friends and family.</string>
    <string name="leader_frag_refreshing_leaderboard_dialog_msg">We are cleaning up and refreshing leaderboard, it may take some time. \nThank you.</string>
    <string name="leader_frag_result_timer_title">Winner result in : </string>
    <string name="leader_frag_rank_1_player_name">Rank 1</string>
    <string name="leader_frag_rank_2_player_name">Rank 2</string>
    <string name="leader_frag_rank_3_player_name">Rank 3</string>
    <string name="leader_frag_self_player_name">name</string>
    <string name="leader_frag_self_player_rank">rank</string>
    <string name="leader_frag_self_player_coins">coins</string>
    <string name="leader_frag_self_player_balance">balance</string>
    <string name="rv_leaderboard_name">"Name "</string>
    <string name="rv_leaderboard_rank">"Rank "</string>
    <string name="rv_leaderboard_userCoins">"Coins "</string>
    <string name="gameOffer_frag_show_more_game">Show</string>
    <string name="gameOffer_frag_show_less_game">Hide</string>
    <string name="gameOffer_frag_dummydata_quiz_title">Quizzes</string>
    <string name="gameOffer_frag_dummydata_prediction_title">Prediction Game</string>
    <string name="gameOffer_frag_action_game_title">Action Games</string>
    <string name="gameOffer_frag_adventure_game_title">Adventure Games</string>
    <string name="gameOffer_frag_arcade_game_title">Arcade Games</string>
    <string name="gameOffer_frag_puzzle_logic_game_title">Puzzle &amp; Logic Games</string>
    <string name="gameOffer_frag_sports_racing_game_title">Sports &amp; Racing Games</string>
    <string name="gameOffer_frag_strategy_game_title">Strategy Games</string>
    <string name="wall_frag_toolbar_wallet">Wallet</string>
    <string name="wall_frag_toolbar_transaction_history">Transactions</string>
    <string name="wall_frag_transaction_history_custom_toast_text">Withdraw history under maintenance. Thank you.</string>
    <string name="wall_frag_total_coins">Total coins</string>
    <string name="wall_frag_wallet_balance">Wallet Balance</string>
    <string name="wall_frag_past_winner_data_not_available">Oops...Data not available !!!</string>
    <string name="walletFrag_cashBalance_text">Cash Balance</string>
    <string name="walletFrag_coinBalance_text">Coin Balance</string>
    <string name="wallet_withdrawCash_btnFrame_text">Withdraw Cash</string>
    <string name="wallet_redeemCoin_btnFrame_text">Convert Coins</string>
    <string name="wallet_withdrawCash_1usd_disable_msg">Because of too many requests USD $1 Coupon is disabled</string>
    <string name="wallet_withdrawCash_offer_1usd_paypal_text">Get USD $1 \nPaypal Cash</string>
    <string name="wallet_withdrawCash_offer_2usd_paypal_text">Get USD $2 \nPaypal Cash</string>
    <string name="wallet_withdrawCash_offer_5usd_paypal_text">Get USD $5 \nPaypal Cash</string>
    <string name="wallet_withdrawCash_offer_10usd_paypal_text">Get USD $10 \nPaypal Cash</string>
    <string name="wallet_withdrawCash_offer_1usd_amazonPay_text">Get USD $1 Amazon Pay Gift Card</string>
    <string name="wallet_withdrawCash_offer_2usd_amazonPay_text">Get USD $2 Amazon Pay Gift Card</string>
    <string name="wallet_withdrawCash_offer_5usd_amazonPay_text">Get USD $5 Amazon Pay Gift Card</string>
    <string name="wallet_withdrawCash_offer_10usd_amazonPay_text">Get USD $10 Amazon Pay Gift Card</string>
    <string name="wallet_redeemCoin_offer_1rs_text">Get USD $1 in your Cash Balance</string>
    <string name="wallet_redeemCoin_offer_2rs_text">Get USD $2 in your Cash Balance</string>
    <string name="wallet_redeemCoin_offer_5rs_text">Get USD $5 in your Cash Balance</string>
    <string name="wallet_redeemCoin_offer_10rs_text">Get USD $10 in your Cash Balance</string>
    <string name="wall_frag_withdraw_your_name">Please enter your name</string>
    <string name="wall_frag_withdraw_your_mobile">Please enter your mobile number</string>
    <string name="wall_frag_withdraw_invalid_mobile">Invalid mobile number</string>
    <string name="dialog_force_update_title">Update dummydata</string>
    <string name="dialog_force_update_msg">dummydata recommends that you update to the latest version. To avoid bugs it is necessary to update the app right now.</string>
    <string name="dialog_force_update_button">Update</string>
    <string name="dialog_force_update_google_play">Google Play</string>
    <string name="dialog_maintenance_title">** Under maintenance !!!</string>
    <string name="dialog_maintenance_msg_1">App is currently under maintenance. <br /> Please come back after sometime. <br /> Thank you.</string>
    <string name="dialog_maintenance_expected_time">Expected time :</string>
    <string name="dialog_maintenance_exit_button">Exit</string>
    <string name="dialog_maintenance_refresh_button">Refresh</string>
    <string name="dialog_no_internet_title">Please check your internet connection !!!!</string>
    <string name="dialog_no_internet_exit_button">Exit</string>
    <string name="dialog_no_internet_reload_button">Reload</string>
</resources>